--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     </div>
   </div>
 
+  <div id="loading" class="loading-screen">
+    <div class="loading-message">Processing...</div>
+    <div class="countdown" id="countdown">10</div>
+  </div>
+
   <footer>
     <img src="minilogo.png" alt="AI Club Logo" class="logo">
     <p class="footer-text">AI Club Nationality Predictor</p>
