--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="loading" class="loading-screen">
-    <div class="loading-message">Processing...</div>
+    <div class="loading-message">Predicting...</div>
     <div class="countdown" id="countdown">10</div>
   </div>
 
