--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button id="capture">Capture</button>
     </div>
     <div class="result-container">
-      <h2 style="color:#faffde;">Prediction Result:</h2>
+      <h2 style="color:#faffde;">Nationality Prediction Result:</h2>
       <p id="result">Waiting for result...</p>
     </div>
   </div>
